deps/src/cmake-3.9.3/Tests/RunCMake/CommandLine/E_copy_directory-three-source-files-target-is-file-stderr.txt
^Error copying directory from .* to .*file_for_test.txt\".*
Error copying directory from .* to .*file_for_test.txt\".*
Error copying directory from .* to .*file_for_test.txt\".$
